kubernetes/longhorn/backs/ingress-back.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    # Indica a Traefik que use HTTPS en el entrypoint 'websecure'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # Aquí es donde enlazas tu Ingress con el Middleware ForwardAuth
    traefik.ingress.kubernetes.io/router.middlewares: |
      longhorn-system-longhorn-oauth2-proxy@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: longhorn.khazadlab.duckdns.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
  - hosts:
    - longhorn.khazadlab.duckdns.org
    secretName: tls-longhorn-ingress
